[tool.poetry]
name = "blueprint-application-dockercompose"
version = "1.0.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
testcontainers = "^3.7.1"
testinfra = "^6.0.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
